updated override file to use github-sandbox hostname

--- a/terraform/resources/override.yaml
+++ b/terraform/resources/override.yaml
@@ -15,7 +15,7 @@ frontend:
       # additional aws alb ingress controller supported annotations
       # ...
     # replace with your actual domain
-    host: bitbucket-sandbox.sourcegraph.com
+    host: github-sandbox.sourcegraph.com
   replicaCount: 2
   resources:
     limits:
